--- a/project.ipynb
+++ b/project.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,27 +258,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = data.drop(columns=[\"url\", \"region_url\",\"image_url\",'description','county', 'state', 'lat', 'long', 'paint_color', 'size', 'drive', 'type'])"
+    "data = data.drop(columns=[\"id\", \"cylinders\", \"url\", \"region_url\", \"fuel\", \"image_url\",'description','county', 'state', 'lat', 'long', 'paint_color', 'size', 'drive', 'type', \"vin\", \"title_status\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['id', 'region', 'price', 'year', 'manufacturer', 'model', 'condition',\n",
-       "       'cylinders', 'fuel', 'odometer', 'title_status', 'transmission', 'vin'],\n",
+       "Index(['region', 'price', 'year', 'manufacturer', 'model', 'condition',\n",
+       "       'odometer', 'transmission'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,22 +289,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'san diego', 'kalispell', 'valdosta', 'victoria', 'birmingham', 'fort wayne', 'southern illinois', 'grand rapids', 'delaware', 'binghamton', 'eastern CT', 'bismarck', 'statesboro', 'susanville', 'kirksville', 'grand forks', 'waterloo / cedar falls', 'joplin', 'yakima', 'auburn', \"spokane / coeur d'alene\", 'lehigh valley', 'southern maryland', 'pierre / central SD', 'pensacola', 'lansing', 'ocala', 'battle creek', 'SF bay area', 'eastern CO', 'boise', 'columbus', 'southeast KS', 'tuscarawas co', 'santa barbara', 'east idaho', 'oregon coast', 'clarksville', 'fredericksburg', 'south dakota', 'deep east texas', 'northwest CT', 'st louis', 'sandusky', 'kalamazoo', 'waco', 'memphis', 'southwest MN', 'helena', 'asheville', 'manhattan', 'boulder', 'phoenix', 'wichita', 'rhode island', 'bowling green', 'bemidji', 'tyler / east TX', 'san antonio', 'ogden-clearfield', 'harrisonburg', 'flint', 'appleton-oshkosh-FDL', 'lake charles', 'st joseph', 'la crosse', 'monroe', 'medford-ashland', 'st augustine', 'colorado springs', 'annapolis', 'roswell / carlsbad', 'denver', 'fairbanks', 'yuma', 'chautauqua', 'zanesville / cambridge', 'moses lake', 'eastern NC', 'roanoke', 'charleston', 'corvallis/albany', 'charlottesville', 'little rock', 'indianapolis', 'jacksonville', 'dallas / fort worth', 'roseburg', 'reading', 'cookeville', 'hudson valley', 'fayetteville', 'imperial county', 'skagit / island / SJI', 'fort dodge', 'flagstaff / sedona', 'kenosha-racine', 'parkersburg-marietta', 'southeast alaska', 'houston', 'twin falls', 'northern michigan', 'rochester', 'savannah / hinesville', 'orange county', 'sarasota-bradenton', 'southwest MS', 'palm springs', 'southeast IA', 'macon / warner robins', 'meadville', 'st cloud', 'green bay', 'el paso', 'north jersey', 'san luis obispo', 'elko', 'albuquerque', 'new york city', 'san angelo', 'lawton', 'hawaii', 'gulfport / biloxi', 'charlotte', 'mendocino county', 'gainesville', 'hickory / lenoir', 'ithaca', 'augusta', 'east oregon', 'janesville', 'cleveland', 'mattoon-charleston', 'lake of the ozarks', 'great falls', 'york', 'columbia / jeff city', 'hattiesburg', 'gadsden-anniston', 'state college', 'tri-cities', 'provo / orem', 'southern WV', 'vermont', 'bloomington-normal', 'potsdam-canton-massena', 'shreveport', 'st louis, MO', 'oklahoma city', 'sioux city', 'santa maria', 'texoma', 'ann arbor', 'rockford', 'danville', 'finger lakes', 'panama city', 'brunswick', 'humboldt county', 'mankato', 'galveston', 'upper peninsula', 'portland', 'kansas city, MO', 'south coast', 'lexington', 'chico', 'logan', 'siskiyou county', 'huntington-ashland', 'salt lake city', 'redding', 'hartford', 'daytona beach', 'nashville', 'sacramento', 'abilene', 'southwest VA', 'tuscaloosa', 'lynchburg', 'muncie / anderson', 'southwest KS', 'heartland florida', 'kokomo', 'montgomery', 'syracuse', 'quad cities, IA/IL', 'outer banks', 'northern panhandle', 'los angeles', 'winston-salem', 'bend', 'peoria', 'omaha / council bluffs', 'cumberland valley', 'wyoming', 'baton rouge', 'lubbock', 'twin tiers NY/PA', 'lafayette / west lafayette', 'altoona-johnstown', 'cape cod / islands', 'olympic peninsula', 'new river valley', 'okaloosa / walton', 'detroit metro', 'holland', 'sheboygan', 'bakersfield', 'erie', 'high rockies', 'northwest GA', 'eastern kentucky', 'scranton / wilkes-barre', 'glens falls', 'del rio / eagle pass', 'inland empire', 'watertown', 'meridian', 'rapid city / west SD', 'odessa / midland', 'worcester / central MA', 'lafayette', 'eastern montana', 'lawrence', 'decatur', 'merced', 'cedar rapids', 'anchorage / mat-su', 'west virginia (old)', 'brownsville', 'champaign urbana', 'youngstown', 'new haven', 'reno / tahoe', 'ft myers / SW florida', 'missoula', 'dubuque', 'santa fe / taos', 'butte', 'evansville', 'treasure coast', 'mobile', 'ventura county', 'sioux falls / SE SD', 'tulsa', 'amarillo', 'port huron', 'dothan', 'western massachusetts', 'eastern panhandle', 'southwest TX', 'columbia', 'cincinnati', 'chillicothe', 'clovis / portales', 'san marcos', 'long island', 'mohave county', 'south florida', 'wichita falls', 'kansas city', 'central NJ', 'poconos', 'monterey bay', 'lewiston / clarkston', 'houma', 'northwest OK', 'terre haute', 'knoxville', 'northeast SD', 'seattle-tacoma', 'show low', 'lincoln', 'space coast', 'louisville', 'jersey shore', 'central louisiana', 'hanford-corcoran', 'grand island', 'huntsville / decatur', 'prescott', 'maine', 'dayton / springfield', 'western maryland', 'iowa city', 'fargo / moorhead', 'albany', 'the thumb', 'southwest michigan', 'oneonta', 'fort smith, AR', 'new orleans', 'akron / canton', 'milwaukee', 'st george', 'gold country', 'tallahassee', 'harrisburg', 'lima / findlay', 'tucson', 'mcallen / edinburg', 'athens', 'salina', 'minneapolis / st paul', 'atlanta', 'plattsburgh-adirondacks', 'florida keys', 'bozeman', 'scottsbluff / panhandle', 'fort smith', 'saginaw-midland-baycity', 'pueblo', 'ames', 'fort collins / north CO', 'wenatchee', 'des moines', 'modesto', 'eastern shore', 'washington, DC', 'bloomington', 'buffalo', 'north central FL', 'new hampshire', 'visalia-tulare', 'chattanooga', 'wausau', 'north platte', 'sierra vista', 'muskegon', 'madison', 'western IL', 'boston', 'frederick', 'chicago', 'laredo', 'las cruces', 'fresno / madera', 'philadelphia', 'western slope', 'northern WI', 'la salle co', 'billings', 'college station', 'norfolk / hampton roads', 'hilton head', 'winchester', 'bellingham', 'south jersey', 'mason city', 'yuba-sutter', 'baltimore', 'beaumont / port arthur', 'kennewick-pasco-richland', 'greensboro', 'owensboro', 'central michigan', 'elmira-corning', 'wilmington', 'utica-rome-oneida', 'pullman / moscow', 'northwest KS', 'tampa bay area', 'toledo', 'florence', 'richmond', 'brainerd', 'myrtle beach', 'stockton', 'duluth / superior', 'salem', 'williamsport', 'corpus christi', 'texarkana', 'mansfield', 'florence / muscle shoals', 'catskills', 'north dakota', 'topeka', 'jackson', 'pittsburgh', 'lakeland', 'western KY', 'north mississippi', 'kenai peninsula', 'raleigh / durham / CH', 'killeen / temple / ft hood', 'farmington', 'orlando', 'stillwater', 'greenville / upstate', 'southeast missouri', 'springfield', 'eau claire', 'las vegas', 'klamath falls', 'lancaster', 'eugene', 'austin', 'south bend / michiana', 'morgantown', 'jonesboro', 'ashtabula', 'boone'}\n"
+      "{nan, 'other', 'manual', 'automatic'}\n",
+      "4\n"
      ]
     }
    ],
    "source": [
     "d = []\n",
-    "for guy in data['region']:\n",
+    "for guy in data['transmission']:\n",
     "    d.append(guy)\n",
-    "print(set(d))"
+    "lad = set(d)\n",
+    "print(lad)\n",
+    "print(len(lad))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {}\n",
+    "for guy in data['transmission']:\n",
+    "    if guy not in d.keys():\n",
+    "        d[guy] =  0\n",
+    "    d[guy] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'automatic': 292619, 'manual': 23647, 'other': 11799, nan: 95792}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data.columns)"
    ]
   },
   {
@@ -312,7 +368,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# to do:\n",
+    "\n",
+    "# encodes transmissions to integers 0 and 1. other and nan should be changed to automatic\n",
+    "# if we cant to, replace 'region' name with median income of each region\n",
+    "# encode makes and models as ints, same w condition"
+   ]
   }
  ],
  "metadata": {
